2011-03-26  Bruno Haible  <bruno@clisp.org>

	Allow omitting spaces in property names.
	* doc/unictype.texi (Properties as objects): Add details about how
	uc_property_byname works.

2011-03-26  Bruno Haible  <bruno@clisp.org>

	Allow omitting spaces in joining group names.
	* doc/unictype.texi (Joining group): Add details about how
	uc_joining_group_byname works.

2011-03-26  Bruno Haible  <bruno@clisp.org>

	Support long names of joining types.
	* doc/unictype.texi (Joining type): Document
	uc_joining_type_long_name. Mention that uc_joining_type_byname
	recognizes long names.

2011-03-26  Bruno Haible  <bruno@clisp.org>

	Support long names of bidi classes.
	* doc/unictype.texi (Bidi class): Document
	uc_bidi_class_long_name. Mention that uc_bidi_class_byname recognizes
	long names.

2011-03-26  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* autogen.sh (GNULIB_MODULES): Use unictype/bidiclass-all instead of
	unictype/bidicategory-all.

2011-03-26  Bruno Haible  <bruno@clisp.org>

	Support names and long names of canonical combining classes.
	* autogen.sh (GNULIB_MODULES): Use unictype/combining-class-all instead
	of unictype/combining-class.
	* doc/unictype.texi (Canonical combining class): Mention UC_CCC_ATA.
	Document the functions uc_combining_class_name,
	uc_combining_class_long_name, uc_combining_class_byname.

2011-03-25  Bruno Haible  <bruno@clisp.org>

	Support long names of general category values.
	* doc/unictype.texi (Object oriented API): Document
	uc_general_category_long_name. Mention that uc_general_category_byname
	recognizes long names.

2011-03-25  Bruno Haible  <bruno@clisp.org>

	Add support for general category group LC.
	* doc/unictype.texi (Object oriented API): Mention UC_CATEGORY_LC,
	UC_CASED_LETTER.
	(Bit mask API): Mention UC_CATEGORY_MASK_LC.

2011-03-22  Bruno Haible  <bruno@clisp.org>

	Use term "bidi class" instead of "bidirectional category".
	* doc/libunistring.texi: Update menu.